# LockIn

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-data-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-agents-rag/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-11-PLAN.md  03-11-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-integration-risk/: 04-01-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/reference/: README.md
scripts/: download_backtest_data.py  setup_data_tables.py  setup_db.py  setup_rag_tables.py
tests/: conftest.py  test_graph_e2e.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_data_pipeline.py  test_ragas.py
tests/unit/: test_bear.py  test_guardian.py  test_judge.py  test_judge_math.py  test_macro_oracle.py  test_optimizer.py  test_rag.py  test_risk_scores.py  test_strategist.py  test_valuations.py  test_value_hunter.py
(+39 files in other folders)
