[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lockin"
version = "0.1.0"
description = "AI-Investment Swarm — Multi-agent Bayesian investment decision support system"
requires-python = ">=3.12"

dependencies = [
    # LangGraph orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",

    # LangGraph PostgreSQL checkpointing
    "langgraph-checkpoint-postgres>=2.0.0",

    # Supabase (PostgreSQL + pgvector)
    "supabase>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",

    # Financial data
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",

    # RAG
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "ragas>=0.2.0",
    "edgar",
    "pypdf>=4.0.0",
    "langchain-text-splitters>=0.3.0",

    # UI
    "streamlit>=1.40.0",
    "plotly>=5.24.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.11.0",
    "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lockin"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
